--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ img{
 .section-title{
     position: relative;
     font-size: var(--big-font-size);
-    margin-bottom: var(--mb-4);
+    margin-bottom: var(--mb-5);
     text-align: center;
     letter-spacing: .1rem;
 }
@@ -101,7 +101,7 @@ img{
     position: absolute;
     width: 56px;
     height: .18rem;
-    top: -1rem;
+    bottom: -0.5rem;
     left: 0;
     right: 0;
     margin: auto;
@@ -125,7 +125,8 @@ img{
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--dark-color-lighten);
+    /* background-color: var(--dark-color-lighten); */
+    background-color: #E6E6E6;
 }
 
 /*===== NAV =====*/
@@ -167,19 +168,20 @@ img{
 }
 
 /*Active link*/
-.active{
+.nav-link.active{
     position: relative;
 }
 
-.active::before{
+.nav-link.active::before{
     content: '';
     position: absolute;
     bottom: -.5rem;
-    left: 45%;
-    width: 4px;
-    height: 4px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 40px;
+    height: 2px;
     background-color: var(--dark-color);
-    border-radius: 50%;
 }
 /*Change color header*/
 .scroll-header{
@@ -227,6 +229,86 @@ img{
 }
 .home-description{
     margin-bottom: var(--mb-6);
+}
+
+/*home slider*/
+.slider-container{
+    max-width: 100%;
+    max-height: calc(100vh - var(--header-height) - 1.5rem);
+    width: 100%;
+    height: auto;
+    position: relative;
+    background-color: #F5F5F5;
+}
+.slider-item img{
+    /* width: 100%;
+    max-height: 100vh;
+    height: inherit;
+    object-fit: conver;
+    vertical-align: top;
+    transition: 2s; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100vw;
+    height: calc(100vh - var(--header-height));
+    object-fit: cover;
+    margin-top: calc(var(--header-height) + 1.5rem);
+}
+.directions{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.directions i{
+    color: #fff;
+    display: inline-block;
+    padding: 20px;
+    text-decoration: none;
+    transition: .3s;
+    cursor: pointer;
+}
+.directions a:hover{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.bars{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content:center;
+    margin-bottom: 1rem;
+}
+.bars .bar{
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    margin: 0 2px;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    margin-left: 3px;
+}
+.bars .bar.active{
+    background-color: #eb4734;
+}
+
+.fade{
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+@keyframes fade {
+    from{
+        opacity: .4;
+    }
+    to{
+        opacity: 1;
+    }
+    
 }
 
 /*BUTTONS*/
@@ -307,8 +389,19 @@ img{
 .sneaker-name{
     margin-bottom: var(--mb-1);
 }
+.sneaker-content-price,
 .sneaker-price{
     margin-bottom: var(--mb-4);
+}
+.sneaker-price-offer{
+    text-decoration: line-through; 
+    font-size: var(--normal-font-size); 
+    margin-left: .5rem; 
+    color: var(--dark-color-light) ;
+}
+.sneaker-discount{
+    color: #00a000;
+    font-size: var(--normal-font-size);
 }
 
 .sneaker-pages{
@@ -386,7 +479,7 @@ img{
     margin-bottom: var(--mb-3);
 }
 .offer-img{
-    width: 153px;
+    width: 290px;
 }
 /*===== NEW COLLECTION  =====*/
 .new-container{
